meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/Meta_Integration_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Meta Integration Settings</label>
    <pluralLabel>Meta Integration Settings</pluralLabel>
</CustomObject>