meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/App_ID__c.field-meta.xml
<CustomField>
    <fullName>App_ID__c</fullName>
    <label>App ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>