meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/App_Secret__c.field-meta.xml
<CustomField>
    <fullName>App_Secret__c</fullName>
    <label>App Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>