meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/Custom_Lead_Source_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Custom_Lead_Source_Field_API__c</fullName>
    <description>API name of a custom Lead Source field in your org (e.g. Lead_Source__c). Leave blank if using the standard LeadSource field only.</description>
    <label>Custom Lead Source Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>