meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/Graph_API_Version__c.field-meta.xml
<CustomField>
    <fullName>Graph_API_Version__c</fullName>
    <label>Graph API Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>