meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/Integration_Source_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Integration_Source_Field_API__c</fullName>
    <description>API name of a custom Integration Source field in your org. Used to identify leads coming from PurplSync.</description>
    <label>Integration Source Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>