meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/License_Server_URL__c.field-meta.xml
<CustomField>
    <fullName>License_Server_URL__c</fullName>
    <label>License Server URL</label>
    <type>Url</type>
</CustomField>