meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/Project_Field_API__c.field-meta.xml
<CustomField>
    <fullName>Project_Field_API__c</fullName>
    <description>API name of the Lead field that stores the project or property interest (e.g. Project_Interested__c). Leave blank if not used.</description>
    <label>Project / Property Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>