meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/UTM_Source_Field_API__c.field-meta.xml
<CustomField>
    <fullName>UTM_Source_Field_API__c</fullName>
    <description>API name of the Lead field that stores UTM Source (e.g. utm_source__c). Leave blank if not used.</description>
    <label>UTM Source Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>