meta-lead-ads-package/main/default/objects/Meta_Integration_Settings__mdt/fields/UTM_Term_Field_API__c.field-meta.xml
<CustomField>
    <fullName>UTM_Term_Field_API__c</fullName>
    <description>API name of the Lead field that stores UTM Term (e.g. utm_term__c). Leave blank if not used.</description>
    <label>UTM Term Field API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>